--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase-firestore.js"></script>
     <script>
       // Initialize Firebase
       var config = {
